--- a/ui/css/adminPanel.css
+++ b/ui/css/adminPanel.css
@@ -12,7 +12,7 @@ body {
 }
 
 h1, h2 {
-    color: #4CAF50;
+    color: #28a745;
 }
 
 .alert {
@@ -23,7 +23,7 @@ h1, h2 {
 }
 
 .alert-success {
-    color: #155724;
+    color: #28a745;
     background-color: #d4edda;
     border-color: #c3e6cb;
 }
@@ -58,20 +58,17 @@ select {
 }
 
 .btn-primary {
-    background-color: #007bff;
+    background-color: #28a745;
 }
 
 .btn-danger {
-    background-color: #dc3545;
+    background-color: #28a745;
 }
 
 .btn-info {
-    background-color: #17a2b8;
+    background-color: #28a745;
 }
 
-.btn:hover {
-    opacity: 0.9;
-}
 
 #users-list {
     display: grid;
@@ -83,7 +80,7 @@ select {
     border: 1px solid #ddd;
     border-radius: 8px;
     padding: 15px;
-    background-color: #f9f9f9;
+    background-color: #28a745;
 }
 
 .card-body {
@@ -107,7 +104,7 @@ select {
 
 #pagination button {
     padding: 0.5rem 1rem;
-    background-color: #4CAF50;
+    background-color: #28a745;
     color: white;
     border: none;
     cursor: pointer;
@@ -117,4 +114,12 @@ select {
 #pagination button:disabled {
     background-color: #ddd;
     cursor: not-allowed;
+}
+
+.btn-primary:hover,
+.btn-danger:hover,
+.btn-info:hover,
+#pagination button:hover {
+    background-color: #28a745; /* Keep the same green background on hover */
+    color: white; /* Keep the text color white on hover */
 }
