--- a/ui/css/plants.css
+++ b/ui/css/plants.css
@@ -6,7 +6,7 @@ body {
 }
 
 header {
-    background-color: #4CAF50;
+    background-color: #28a745;
     color: white;
     text-align: center;
     padding: 1rem;
@@ -27,7 +27,7 @@ main {
 
 #search-button {
     padding: 0.5rem 1rem;
-    background-color: #4CAF50;
+    background-color: #28a745;
     color: white;
     border: none;
     cursor: pointer;
@@ -51,7 +51,7 @@ main {
 }
 
 .add-to-cart {
-    background-color: #4CAF50;
+    background-color: #28a745;
     color: white;
     border: none;
     padding: 0.5rem 1rem;
@@ -66,7 +66,7 @@ main {
 
 #pagination button {
     padding: 0.5rem 1rem;
-    background-color: #4CAF50;
+    background-color: #28a745;
     color: white;
     border: none;
     cursor: pointer;
@@ -76,4 +76,54 @@ main {
 #pagination button:disabled {
     background-color: #ddd;
     cursor: not-allowed;
+}
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content button {
+    background-color: #28a745; /* Same green as other buttons */
+    color: white;
+    border: none;
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+    border-radius: 4px; /* Optional: to match the style of other buttons */
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 600px;
+}
+
+.close {
+    position: absolute;  /* Position it relative to the modal */
+    top: 10px;            /* Adjust the position to move it to the top */
+    right: 10px;          /* Adjust the position to move it to the right */
+    color: #aaa;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+#create-plant-btn {
+    background-color: #28a745; /* Custom green color */
+    color: white;
+    border: none;
 }
