implemented google maps in fe while using web service

--- a/ui/css/plants.css
+++ b/ui/css/plants.css
@@ -39,6 +39,9 @@ main {
     gap: 2rem;
 }
 
+.country-map {
+    height: 100px;
+}
 .plant-card {
     border: 1px solid #ddd;
     border-radius: 5px;
