--- a/ui/css/plants.css
+++ b/ui/css/plants.css
@@ -52,16 +52,25 @@ main {
 }
 .plant-card {
     border: 1px solid #ddd;
-    border-radius: 5px;
-    padding: 1rem;
+    border-radius: 8px;
+    padding: 15px;
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     text-align: center;
-    background-color: #ddd;
 }
 
 .plant-card h2 {
     margin-top: 0;
 }
 
+.plant-card h3 {
+    font-size: 1.5rem;
+    color: #333;
+}
+.section h2 {
+    color: #28a745;
+    font-weight: bold;
+}
 .add-to-cart {
     background-color: #28a745;
     color: white;
@@ -77,12 +86,11 @@ main {
 }
 
 #pagination button {
-    padding: 0.5rem 1rem;
     background-color: #28a745;
     color: white;
     border: none;
-    cursor: pointer;
-    margin: 0 0.5rem;
+    padding: 0.5rem 1rem;
+    border-radius: 4px;
 }
 
 #pagination button:disabled {
