--- a/ui/css/styles.css
+++ b/ui/css/styles.css
@@ -31,3 +31,28 @@ body {
     padding: 15px;
     margin-bottom: 20px;
 }
+
+#page-title {
+    background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent white background */
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    color: #333;
+    font-weight: bold;
+}
+
+.page-number {
+    background-color: rgba(0, 0, 0, 0.6); /* Semi-transparent dark background */
+    color: #fff;
+    padding: 0.3rem 0.8rem;
+    border-radius: 4px;
+    font-weight: bold;
+}
+#search-section h2 {
+    background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent white background */
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    color: #333;
+    font-weight: bold;
+    text-align: center;
+    display: inline-block;
+}
